tests/baselines/reference/functionCallOnConstrainedTypeVariable.errors.txt
functionCallOnConstrainedTypeVariable.ts(11,7): error TS2345: Argument of type '"s"' is not assignable to parameter of type 'never'.
functionCallOnConstrainedTypeVariable.ts(15,7): error TS2345: Argument of type '"s"' is not assignable to parameter of type 'never'.
functionCallOnConstrainedTypeVariable.ts(18,5): error TS2345: Argument of type '""' is not assignable to parameter of type 'never'.
functionCallOnConstrainedTypeVariable.ts(19,9): error TS2554: Expected 1 arguments, but got 4.


==== functionCallOnConstrainedTypeVariable.ts (4 errors) ====
    // Repro from #20196
    
    type A = {
      a: (x: number) => string
    };
    type B = {
      a: (x: boolean) => string
    };
    
    function call0(p: A | B) { 
      p.a("s"); // Error
          ~~~
!!! error TS2345: Argument of type '"s"' is not assignable to parameter of type 'never'.
    }
    
    function callN<T extends A | B>(p: T) {
      p.a("s"); // Error
          ~~~
!!! error TS2345: Argument of type '"s"' is not assignable to parameter of type 'never'.
      
      var a: T["a"] = p.a;
      a(""); // Error
        ~~
!!! error TS2345: Argument of type '""' is not assignable to parameter of type 'never'.
      a("", "", "", ""); // Error
            ~~~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 4.
    }